linux: added restart after 30 seconds
restart after 30 seconds since it fails initially to connect
https://www.freedesktop.org/software/systemd/man/systemd.service.html

--- a/linux/etc/systemd/system/stepsboi.service
+++ b/linux/etc/systemd/system/stepsboi.service
@@ -10,6 +10,7 @@ ExecStartPre=git pull --ff-only
 ExecStart=node .
 KillMode=process
 Restart=on-failure
+RestartSec=30
 RestartPreventExitStatus=255
 Type=simple
 User=stepsboi
